Fix Apache config

--- a/debian/config/apache/xdi2-selfhosted.conf
+++ b/debian/config/apache/xdi2-selfhosted.conf
@@ -1,7 +1,7 @@
-ProxyPass /xdi/ http://localhost:8080/
-ProxyPassReverse /xdi/ http://localhost:8080/
+ProxyPass /xdi/ http://localhost:8080/xdi/
+ProxyPassReverse /xdi/ http://localhost:8080/xdi/
 
-<Proxy http://localhost:8080/*>
+<Proxy http://localhost:8080/xdi/*>
   Require all granted
 </Proxy>
 
